# RGBD-VIO

./: CMakeLists.txt  package.xml
src/RGBD-VIO/: CMakeLists.txt  package.xml
src/RGBD-VIO/src/: CMakeLists.txt.bck  feature_manager.cpp  feature_manager.h  imu_factor.h  marginalization_factor.cpp  marginalization_factor.h  micro.h  package.xml.bck  parameters.cpp  parameters.h  pcl_cloud.h  plane.h  plane.hpp  plane_correct_pose.cpp  projection_quat.cpp  projection_quat.h  run_dvio_node.cpp  rvio.cpp  rvio.h  rvio_dvio.cpp  rvio_init.cpp  rvio_plane.cpp  rvio_syn_node.cpp  visualization.cpp  visualization.h
src/RGBD-VIO/src/feature_tracker/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp  show_feat_result.cpp  vtk_viewer.h  vtk_viewer.hpp
src/RGBD-VIO/src/initial/: gmm_model.h  initial_alignment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  solve_5pts.cpp  solve_5pts.h  solve_opt.cpp
src/RGBD-VIO/src/utility/: plane_correct_pose.h
src/camera_models/: CMakeLists.txt  package.xml
src/camera_models/include/camodocal/calib/: CameraCalibration.h
src/camera_models/include/camodocal/camera_models/: Camera.h
src/camera_models/include/camodocal/gpl/: EigenQuaternionParameterization.h  EigenUtils.h
src/camera_models/src/: intrinsic_calib.cc
src/camera_models/src/calib/: CameraCalibration.cc
src/camera_models/src/chessboard/: Chessboard.cc
src/camera_models/src/gpl/: EigenQuaternionParameterization.cc
