<?xml version="1.0"?>
<package format="2">
  <name>rgbd_vio</name>
  <version>0.0.1</version>
  <description>A RGBD camera-based visual inertial odometry</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 构建依赖 -->
  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>camera_models</depend>
  <!-- camera_model 在 ROS2 中可能没有标准包，请根据实际情况调整或移除 -->


  <depend>Eigen3</depend>
  <depend>OpenCV</depend>
  <depend>Boost</depend>
  <depend>ceres-solver</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
